// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fromPath 1`] = `
"{
 "type": "Article",
 "content": [
  {
   "type": "Paragraph",
   "content": [
    {
     "type": "Text",
     "value": "This is paragraph one. It has two sentences."
    }
   ]
  },
  {
   "type": "Paragraph",
   "content": [
    {
     "type": "Text",
     "value": "Paragraph two, only has one sentence."
    }
   ]
  }
 ]
}"
`;

exports[`fromString 1`] = `
"{
 "type": "Article",
 "content": [
  {
   "type": "Paragraph",
   "content": [
    "Hello world"
   ]
  }
 ]
}"
`;

exports[`fromTo 1`] = `
"This is paragraph one. It has two sentences.

Paragraph two, only has one sentence."
`;

exports[`fromTo 2`] = `"<article><p><span>This is paragraph one. It has two sentences.</span><p><span>Paragraph two, only has one sentence.</span></article>"`;

exports[`toString 1`] = `
"<article dtd-version="1.3" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:mml="http://www.w3.org/1998/Math/MathML">
  <body>
    <p>Hello<bold>again</bold>!</p>
  </body>
</article>"
`;
